<resources>
    <string name="app_name">NeedATrip</string>

    <string name="origin">Nereden</string>
    <string name="destination">Nereye</string>
    <string name="date">Tarih</string>
    <string name="today">Bugün</string>
    <string name="tomorrow">Yarın</string>
    <string name="find_ticket">Bileti Bul</string>
    <string name="going">Gidiş</string>
    <string name="return_">Dönüş</string>
    <string name="departure">KALKIŞ</string>
    <string name="arrival">VARIŞ</string>
    <string name="error_same_location">Hedef ve varış olarak aynı lokasyonu seçemezsiniz.</string>
    <string name="error_same_city_location">Hedef ve varış olarak aynı şehirde lokasyon seçemezsiniz.</string>
    <string name="grown">Yetişkin</string>
    <string name="children">Çocuk</string>
    <string name="select">Seç</string>
    <string name="add_passenger">Yolcu Ekle</string>
    <string name="grown_with_number">%1d YETİŞKİN</string>
    <string name="children_with_number">%1d ÇOCUK</string>
    <string name="tab_bus">Otobüs Bileti</string>
    <string name="tab_flight">Uçak Bileti</string>
    <string name="description_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</string>

</resources>