<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/margin_l"
        android:paddingHorizontal="@dimen/margin_l"
        android:background="@color/alabaster"
        tools:ignore="ContentDescription" >

        <View
            android:id="@+id/bg_calendar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_rectangle_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/text_calendar"/>

        <ImageView
            android:id="@+id/icon_calendar"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/margin_s"
            android:src="@drawable/ic_calendar"
            app:layout_constraintTop_toTopOf="@id/bg_calendar"
            app:layout_constraintBottom_toBottomOf="@id/bg_calendar"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s"
            android:layout_marginEnd="@dimen/margin_xs"
            android:lines="1"
            android:paddingTop="@dimen/margin_m"
            android:text="@string/date"
            android:textAppearance="@style/MediumTextAppearance"
            app:layout_constraintEnd_toStartOf="@id/button_today"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/icon_calendar"
            app:layout_constraintTop_toTopOf="@id/bg_calendar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_m"
            android:lines="1"
            android:ellipsize="end"
            android:textAppearance="@style/MediumTextAppearance.Nevada"
            app:layout_constraintTop_toBottomOf="@id/title_calendar"
            app:layout_constraintStart_toStartOf="@id/title_calendar"
            app:layout_constraintEnd_toEndOf="@id/title_calendar"
            tools:text="1 Nisan 2018 Pazar"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_today"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/margin_xs"
            android:background="@drawable/bg_rectangle_nevada"
            android:text="@string/today"
            android:textColor="@color/white"
            android:textAppearance="@style/SmallTextAppearance"
            android:elevation="0dp"
            app:layout_constraintTop_toTopOf="@id/bg_calendar"
            app:layout_constraintBottom_toTopOf="@id/button_tomorrow"
            app:layout_constraintEnd_toEndOf="@id/bg_calendar"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_tomorrow"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/bg_line_nevada"
            android:text="@string/tomorrow"
            android:textAppearance="@style/SmallTextAppearance"
            android:elevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/button_today"
            app:layout_constraintBottom_toBottomOf="@id/bg_calendar"
            app:layout_constraintEnd_toEndOf="@id/button_today"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_find_ticket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xl"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:text="@string/find_ticket"
            android:textColor="@color/white"
            android:textAppearance="@style/BigTextAppearance"
            android:background="@drawable/bg_rectangle_governor_bay"
            android:elevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/bg_calendar"
            app:layout_constraintStart_toStartOf="@id/bg_calendar"
            app:layout_constraintEnd_toEndOf="@id/bg_calendar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>